tests/export_type/__snapshots__/jsfmt.spec.js.snap
exports[`test cjs_with_types.js 1`] = `
"/* @flow */

export type talias4 = number;
export interface IFoo { prop: number };

module.exports = {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at printExportDeclaration (/src/printer.js:1774:21)
    at genericPrintNoParens (/src/printer.js:488:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
"
`;

exports[`test importer.js 1`] = `
"/* @flow */

import type {
  inlinedType1,
  standaloneType1,
  talias1,
  talias3,
} from \"./types_only\";

var a: inlinedType1 = 42;
var b: inlinedType1 = \'asdf\'; // Error: string ~> number

var c: standaloneType1 = 42;
var d: standaloneType1 = \'asdf\'; // Error: string ~> number

var e: talias1 = 42;
var f: talias1 = \'asdf\'; // Error: string ~> number

var g: talias3 = 42;
var h: talias3 = \'asdf\'; // Error: string ~> number

import type {talias4} from \"./cjs_with_types\";
var i: talias4 = 42;
var j: talias4 = \'asdf\'; // Error: string ~> number

import {IFoo, IFoo2} from \"./types_only\";

var k: IFoo = {prop: 42};
var l: IFoo = {prop: \'asdf\'}; // Error: {prop:string} ~> {prop:number}

var m: IFoo2 = {prop: \'asdf\'};
var n: IFoo2 = {prop: 42}; // Error: {prop:number} ~> {prop:string}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
import type { inlinedType1, standaloneType1, talias1, talias3 } from \"./types_only\";
var a: inlinedType1 = 42;
var b: inlinedType1 = \"asdf\";// Error: string ~> number
var c: standaloneType1 = 42;
var d: standaloneType1 = \"asdf\";// Error: string ~> number
var e: talias1 = 42;
var f: talias1 = \"asdf\";// Error: string ~> number
var g: talias3 = 42;
var h: talias3 = \"asdf\";// Error: string ~> number
import type { talias4 } from \"./cjs_with_types\";
var i: talias4 = 42;
var j: talias4 = \"asdf\";// Error: string ~> number
import { IFoo, IFoo2 } from \"./types_only\";
var k: IFoo = { prop: 42 };
var l: IFoo = { prop: \"asdf\" };// Error: {prop:string} ~> {prop:number}
var m: IFoo2 = { prop: \"asdf\" };
var n: IFoo2 = { prop: 42 };// Error: {prop:number} ~> {prop:string}

"
`;

exports[`test types_only.js 1`] = `
"/* @flow */

export type inlinedType1 = number;
var a: inlinedType1 = 42;
var b: inlinedType1 = \'asdf\'; // Error: string ~> number

type standaloneType1 = number;
export type {standaloneType1};

type standaloneType2 = number;
export {standaloneType2}; // Error: Missing \`type\` keyword

export type {talias1, talias2 as talias3, IFoo2} from \"./types_only2\";

export interface IFoo { prop: number };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1785
        fromString(\", \").join(path.map(print, \"specifiers\")),
                         ^

TypeError: fromString(...).join is not a function
    at printExportDeclaration (/src/printer.js:1785:26)
    at genericPrintNoParens (/src/printer.js:488:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
"
`;

exports[`test types_only2.js 1`] = `
"/* @flow */

export type talias1 = number;
export type talias2 = number;
export interface IFoo2 { prop: string };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at printExportDeclaration (/src/printer.js:1774:21)
    at genericPrintNoParens (/src/printer.js:488:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
"
`;
